--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,18 +19,18 @@
 
     <!-- HEADER -->
     <header class="header">
-        <img class="logo-ohmyfood" src=./images/logo/ohmyfood.png alt="logo d'ohmyfood"/>
+        <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
     </header>
     
     <div>
-        <div class="map-container">
+      <div class="map-container">
         <div class="map-circle">
             <div class="container-icon">
-            <i class="fas fa-map-marker-alt"></i>
+              <i class="fas fa-map-marker-alt"></i>
             </div>
         </div>
-        </div>
-        <form>
+      </div>
+      <form>
         <input
             type="text"
             name="lieu"
@@ -39,35 +39,35 @@
             size="20"
             maxlength="70"
         />
-        </form>
+      </form>
     </div>
 
     <section>
-    <h1>Réservez le menu qui vous convient</h1>
-    <div>Découvrez des restaurants d'exception, sélectionnés par nos soins<div>
-    <button>Explorer nos restaurants</button>
+      <h1>Réservez le menu qui vous convient</h1>
+      <div>Découvrez des restaurants d'exception, sélectionnés par nos soins<div>
+      <button>Explorer nos restaurants</button>
     </section>
 
     <section>
         <h2>Fonctionnement</h2>
-            <div>Choisissez un restaurant</div>
-            <div>Composez votre menu</div>
-            <div>Dégustez au restaurant</div>
+        <div>Choisissez un restaurant</div>
+        <div>Composez votre menu</div>
+        <div>Dégustez au restaurant</div>
     </section>
 
     <section>
         <h2>Restaurants</h2>
-            <div>La palette du goût</div>
-            <div>La note enchantée</div>
-            <div>À la française</div>
-            <div>Le délice des sens</div>
+        <div>La palette du goût</div>
+        <div>La note enchantée</div>
+        <div>À la française</div>
+        <div>Le délice des sens</div>
 
     </section>
 
     <!-- FOOTER -->
     <footer>
         <div class="footer-item">
-            <img class="logo-ohmyfood" src=./images/logo/ohmyfood.png alt="logo d'ohmyfood"/>
+            <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
             <ul>
                 <li><a class="" href="#">Proposer un restaurant</a></li>
                 <li><a class="" href="#">Devenir partenaire</a></li>
