--- a/index.html
+++ b/index.html
@@ -57,38 +57,38 @@
 
     <section>
         <h2>Restaurants</h2>
-        <a class="" href="palette_du_gout.html">
-          <img class="" src=./public/img/palette_du_gout.jpg alt="plat proposé chez La palette du goût"/>
+        <a class="restaurant" href="palette_du_gout.html">
+          <img class="restaurant__img" src=./public/img/palette_du_gout.jpg alt="plat proposé chez La palette du goût"/>
           <ul class="">
-              <li class=""><em>La palette du goût</em></li>
-              <li class="">Ménilmontant</li>
+              <li class="restaurant__name"><em>La palette du goût</em></li>
+              <li class="restaurant__site">Ménilmontant</li>
               <li class="">
                   <i class="fas heart"></i></li>
           </ul>
         </a>
-        <a class="" href="note_enchantee.html">
-          <img class="" src=./public/img/note_enchantee.jpg alt="plat proposé chez La note enchantee"/>
+        <a class="restaurant" href="note_enchantee.html">
+          <img class="restaurant__img" src=./public/img/note_enchantee.jpg alt="plat proposé chez La note enchantee"/>
           <ul class="">
-              <li class=""><em>La note enchantée</em></li>
-              <li class="">Charonne</li>
+              <li class="restaurant__name"><em>La note enchantée</em></li>
+              <li class="restaurant__site">Charonne</li>
               <li class="">
                   <i class="fas heart"></i></li>
           </ul>
         </a>
-        <a class="" href="a_la_francaise.html">
-          <img class="" src=./public/img/a_la_francaise.jpg alt="plat proposé chez A la française"/>
+        <a class="restaurant" href="a_la_francaise.html">
+          <img class="restaurant__img" src=./public/img/a_la_francaise.jpg alt="plat proposé chez A la française"/>
           <ul class="">
-              <li class=""><em>À la française</em></li>
-              <li class="">Cité Rouge</li>
+              <li class="restaurant__name"><em>À la française</em></li>
+              <li class="restaurant__site">Cité Rouge</li>
               <li class="">
                   <i class="fas heart"></i></li>
           </ul>
         </a>
-        <a class="" href="delice_des_sens.html">
-          <img class="" src=./public/img/delice_des_sens.jpg alt="plat proposé chez Le délice des sens"/>
+        <a class="restaurant" href="delice_des_sens.html">
+          <img class="restaurant__img" src=./public/img/delice_des_sens.jpg alt="plat proposé chez Le délice des sens"/>
           <ul class="">
-              <li class=""><em>Le délice des sens</em></li>
-              <li class="">Folie-Méricourt</li>
+              <li class="restaurant__name"><em>Le délice des sens</em></li>
+              <li class="restaurant__site">Folie-Méricourt</li>
               <li class="">
                   <i class="fas heart"></i></li>
           </ul>
