--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
     </header>
     
-    <div>
+    <section class="map">
       <div class="map-container">
         <div class="map-circle">
             <div class="container-icon">
@@ -40,15 +40,15 @@
             maxlength="70"
         />
       </form>
-    </div>
-
-    <section>
-      <h1>Réservez le menu qui vous convient</h1>
-      <div>Découvrez des restaurants d'exception, sélectionnés par nos soins<div>
-      <button>Explorer nos restaurants</button>
     </section>
 
     <section>
+      <h1>Réservez le menu qui vous convient</h1>
+      <div>Découvrez des restaurants d'exception, sélectionnés par nos soins</div>
+      <button>Explorer nos restaurants</button>
+    </section>
+
+    <section class="steps">
         <h2>Fonctionnement</h2>
         <div>Choisissez un restaurant</div>
         <div>Composez votre menu</div>
