Modification des polices, couleurs, padding et margin

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
     <section class="presentation">
       <h1 class="presentation__title">Réservez le menu qui vous convient</h1>
-      <div class="presentation__information">Découvrez des restaurants d'exception, sélectionnés par nos soins</div>
+      <div class="presentation__information">Découvrez des restaurants d'exception, sélectionnés par nos soins.</div>
       <button class="presention__btn">Explorer nos restaurants</button>
     </section>
 
     <section class="steps">
         <h2>Fonctionnement</h2>
-        <div>Choisissez un restaurant</div>
-        <div>Composez votre menu</div>
-        <div>Dégustez au restaurant</div>
+        <div class="steps__element">Choisissez un restaurant</div>
+        <div class="steps__element">Composez votre menu</div>
+        <div class="steps__element">Dégustez au restaurant</div>
     </section>
 
     <section class="container">
@@ -88,8 +88,8 @@
     </section>
 
     <!-- FOOTER -->
-    <footer>
-        <div class="footer-item">
+    <footer class="footer">
+        <div class="footer--container">
             <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
             <ul>
                 <li><a class="" href="#">Proposer un restaurant</a></li>
