Modif classes et parties Localisation et Steps

--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
     </header>
     
     <!-- SECTIONS -->
-    <div class="map-search-container">
-      <div class="map">
-        <div class="map__container">
-            <div class="icon">
+      <div class="localisation">
+        <div class="localisation__map-icon">
+          <div class="localisation__map-icon-container">
+            <div class="localisation__map-icon-insert">
               <i class="fas fa-map-marker-alt"></i>
             </div>
+          </div>
         </div>
-        <form class="map__form">
+        
+        <form class="localisation__form">
           <input
               type="text"
               name="lieu"
@@ -41,7 +43,6 @@
           />
         </form>
       </div>
-    </div>
 
     <section class="presentation">
       <h1 class="presentation__title">Réservez le menu qui vous convient</h1>
