Modif step-block: icones, couleurs, positionnement

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="step-block__icon">
             <div class="step-block__icon-container">
               <div class="step-block__icon-insert">
-                <i class="fas fa-mobile-alt"></i>
+                <i class="fas fa-store"></i>
               </div>
             </div>
           </div>
