--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&family=Shrikhand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <title>Oh My food</title>
@@ -113,30 +113,41 @@
 
         <a class="restaurant" href="palette_du_gout.html">
           <img class="restaurant__img" src=./public/img/palette_du_gout.jpg alt="plat proposé chez La palette du goût"/>
-          <div class="restaurant__name"><em>La palette du goût</em></div>
-          <div class="restaurant__site">Ménilmontant</div>
-          <div class="restaurant__fav"><i class="fas heart"></i></div>
+          <div class="restaurant__new">Nouveau</div>
+          <div class="restaurant__heart">
+            <div class="restaurant__heart-container">
+                <div class="restaurant__heart-insert">
+                    <i class="fas fa-heart"></i>
+                </div>
+            </div>
+          </div>
+          <div class="restaurant__name">
+                La palette du goût
+          </div>
+          <div class="restaurant__description">
+              Ménilmontant
+          </div>
         </a>
 
         <a class="restaurant" href="note_enchantee.html">
           <img class="restaurant__img" src=./public/img/note_enchantee.jpg alt="plat proposé chez La note enchantee"/>
-          <div class="restaurant__name"><em>La note enchantée</em></div>
+          <div class="restaurant__name">La note enchantée</div>
           <div class="restaurant__site">Charonne</div>
-          <div class="restaurant__fav"><i class="fas heart"></i></div>
+          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
         </a>
 
         <a class="restaurant" href="a_la_francaise.html">
           <img class="restaurant__img" src=./public/img/a_la_francaise.jpg alt="plat proposé chez A la française"/>
-          <div class="restaurant__name"><em>À la française</em></div>
+          <div class="restaurant__name">À la française</div>
           <div class="restaurant__site">Cité Rouge</div>
-          <div class="restaurant__fav"><i class="fas heart"></i></div>
+          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
         </a>
 
         <a class="restaurant" href="delice_des_sens.html">
           <img class="restaurant__img" src=./public/img/delice_des_sens.jpg alt="plat proposé chez Le délice des sens"/>
-          <div class="restaurant__name"><em>Le délice des sens</em></div>
+          <div class="restaurant__name">Le délice des sens</div>
           <div class="restaurant__site">Folie-Méricourt</div>
-          <div class="restaurant__fav"><i class="fas heart"></i></div>
+          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
         </a>
 
     </section>
