Création animation bouton Accueil

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             <div class="restaurant__heart-container">
                 <div class="restaurant__heart-insert">
                     <i class="fas fa-heart"></i>
+                    <div class="fas fa-heart gradient-rela">
+                      <div class="fas fa-heart gradient-abso">
+                      </div>
+                    </div>
                 </div>
             </div>
           </div>
