--- a/index.html
+++ b/index.html
@@ -118,10 +118,6 @@
             <div class="restaurant__heart-container">
                 <div class="restaurant__heart-insert">
                     <i class="fas fa-heart"></i>
-                    <div class="fas fa-heart gradient-rela">
-                      <div class="fas fa-heart gradient-abso">
-                      </div>
-                    </div>
                 </div>
             </div>
           </div>
@@ -135,37 +131,89 @@
 
         <a class="restaurant" href="note_enchantee.html">
           <img class="restaurant__img" src=./public/img/note_enchantee.jpg alt="plat proposé chez La note enchantee"/>
-          <div class="restaurant__name">La note enchantée</div>
-          <div class="restaurant__site">Charonne</div>
-          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
+          <div class="restaurant__new">Nouveau</div>
+          <div class="restaurant__heart">
+            <div class="restaurant__heart-container">
+                <div class="restaurant__heart-insert">
+                    <i class="fas fa-heart"></i>
+                </div>
+            </div>
+          </div>
+          <div class="restaurant__name">
+            La note enchantée
+          </div>
+          <div class="restaurant__description">
+            Charonne
+          </div>
         </a>
 
         <a class="restaurant" href="a_la_francaise.html">
           <img class="restaurant__img" src=./public/img/a_la_francaise.jpg alt="plat proposé chez A la française"/>
-          <div class="restaurant__name">À la française</div>
-          <div class="restaurant__site">Cité Rouge</div>
-          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
+          <div class="restaurant__heart">
+            <div class="restaurant__heart-container">
+                <div class="restaurant__heart-insert">
+                    <i class="fas fa-heart"></i>
+                </div>
+            </div>
+          </div>
+          <div class="restaurant__name">
+            À la française
+          </div>
+          <div class="restaurant__description">
+            Cité Rouge
+          </div>
         </a>
 
         <a class="restaurant" href="delice_des_sens.html">
           <img class="restaurant__img" src=./public/img/delice_des_sens.jpg alt="plat proposé chez Le délice des sens"/>
-          <div class="restaurant__name">Le délice des sens</div>
-          <div class="restaurant__site">Folie-Méricourt</div>
-          <div class="restaurant__fav"><i class="far fa-heart"></i></div>
+          <div class="restaurant__heart">
+            <div class="restaurant__heart-container">
+                <div class="restaurant__heart-insert">
+                    <i class="fas fa-heart"></i>
+                </div>
+            </div>
+          </div>
+          <div class="restaurant__name">
+            Le délice des sens
+          </div>
+          <div class="restaurant__description">
+            Folie-Méricourt
+          </div>
         </a>
 
     </section>
 
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer--container">
-            <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
-            <ul>
-                <li><a class="" href="#">Proposer un restaurant</a></li>
-                <li><a class="" href="#">Devenir partenaire</a></li>
-                <li><a class="" href="#">Mentions légales</a></li>
-                <li><a class="" href="#">Contact</a></li>
-            </ul>
+        <div class="footer__logo">
+            <a class="cool-text" href="./index.html">ohmyfood</a>
+        </div>
+        <div class="footer__proposition">
+          <div class="footer__proposition-icon">
+            <div class="footer__proposition-icon-container">
+              <div class="footer__proposition-icon-insert">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <a class="footer__proposition-text footer-font" href="#">Proposer un restaurant</a>
+        </div>
+
+        <div class="footer__proposition">
+          <div class="footer__proposition-icon">
+            <div class="footer__proposition-icon-container">
+              <div class="footer__proposition-icon-insert">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <a class="footer__proposition-text footer-font" href="#">Devenir partenaire</a>
+        </div>
+        <div>      
+          <a class="footer-font" href="#">Mentions légales</a>
+        </div>
+        <div>      
+          <a class="footer-font" href="#">Contact</a>
         </div>
     </footer>
   </body>
