Finalisation footer de la page d'accueil, effet sur la partie Fonctionnement

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="footer__proposition-icon">
             <div class="footer__proposition-icon-container">
               <div class="footer__proposition-icon-insert">
-                <i class="fas fa-heart"></i>
+                <i class="fas fa-utensils"></i>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
           <div class="footer__proposition-icon">
             <div class="footer__proposition-icon-container">
               <div class="footer__proposition-icon-insert">
-                <i class="fas fa-heart"></i>
+                <i class="fas fa-hands-helping"></i>
               </div>
             </div>
           </div>
@@ -212,8 +212,8 @@
         <div>      
           <a class="footer-font" href="#">Mentions légales</a>
         </div>
-        <div>      
-          <a class="footer-font" href="#">Contact</a>
+        <div class="adjust">      
+          <a class="footer-font" href="mailto:hello@openclasrooms.com">Contact</a>
         </div>
     </footer>
   </body>
