Header et titre page PALETTE DU GOUT

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="footer__logo">
-            <a class="cool-text" href="./index.html">ohmyfood</a>
+            <a href="./index.html">ohmyfood</a>
         </div>
         <div class="footer__proposition">
           <div class="footer__proposition-icon">
