--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -17,6 +17,30 @@
 
     <body>
 
+      <!-- HEADER -->
+      <header class="header">
+        <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo d'ohmyfood"/>
+      </header>
+
+      <section class="one-restaurant">
+        <img class="one-restaurant__img" src=./public/img/palette_du_gout.jpg alt="plat proposé chez La palette du goût"/>
+        <div class="one-restaurant__information">
+          <div class="one-restaurant__information-name">
+            La palette du goût
+          </div>
+          <div class="one-restaurant__information-heart restaurant__heart">
+            <div class="restaurant__heart-container">
+              <div class="restaurant__heart-insert">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      
+      </section>
+
+
         
 
     </body>
