Animation block PALETTE DU GOUT

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -46,7 +46,7 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--first">
           <div class="part__all-block-title">Fricassée d'escargot
           </div>
           <div class="part__all-block-precision">Au piment d'Espelette
@@ -54,7 +54,7 @@
           <div class="part__all-block-price">25€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--second">
           <div class="part__all-block-title">Foie gras de canard mi-cuit
           </div>
           <div class="part__all-block-precision">Et ses copeaux de truffe noire
@@ -62,7 +62,7 @@
           <div class="part__all-block-price">35€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--third">
           <div class="part__all-block-title">Oeuf au plat
           </div>
           <div class="part__all-block-precision">Assaisonné à la truffe sur lit de caviar
@@ -78,7 +78,7 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--first">
           <div class="part__all-block-title">Filet de boeuf aux herbes
           </div>
           <div class="part__all-block-precision">Accompagné de sa ribambelle de légumes
@@ -86,7 +86,7 @@
           <div class="part__all-block-price">40€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--second">
           <div class="part__all-block-title">Parmentier de queue de boeuf
           </div>
           <div class="part__all-block-precision">À la truffe noire sur sa purée de panais
@@ -94,7 +94,7 @@
           <div class="part__all-block-price">35€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--third">
           <div class="part__all-block-title">Filet de turbot
           </div>
           <div class="part__all-block-precision">Aux agrumes
@@ -111,7 +111,7 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--first">
           <div class="part__all-block-title">Paris-Brest
           </div>
           <div class="part__all-block-precision">Revisité
@@ -119,7 +119,7 @@
           <div class="part__all-block-price">18€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--second">
           <div class="part__all-block-title">Macaron au chocolat d'exception
           </div>
           <div class="part__all-block-precision">Et glace à la vanille de Madagascar
@@ -127,7 +127,7 @@
           <div class="part__all-block-price">22€
           </div>
         </div>
-        <div class="part__all-block">
+        <div class="part__all-block part__all-block--third">
           <div class="part__all-block-title">Mousse au chocolat
           </div>
           <div class="part__all-block-precision">Au piment d'Espelette et à la truffe noire
