Ajout de la flèche du header PALETTE DU GOUT

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -19,6 +19,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
+      <a href="./index.html" class="fas fa-arrow-left"></a>
       <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
