fix promise process

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/6c5b6372e8.js" crossorigin="anonymous"></script>
     <title>Oh My food</title>
   </head>
 
@@ -120,7 +121,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>
             </div>
           </div>
         </div>
