Modif position MAIN, ajout coeur vide, modif position éléments HEADER

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -35,6 +35,7 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
+              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
               <i class="fas fa-heart"></i>
             </div>
           </div>
