--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
+              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
               <i class="fas fa-heart"></i>
             </div>
           </div>
