Modif position MAIN et FOOTER page Palette du gout et modif anims

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
+              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
               <i class="fas fa-heart"></i>
             </div>
           </div>
@@ -150,6 +151,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
+              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
               <i class="fas fa-heart"></i>
             </div>
           </div>
@@ -164,6 +166,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
+              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
               <i class="fas fa-heart"></i>
             </div>
           </div>
