--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -148,7 +148,7 @@
 
 
     <!-- FOOTER -->
-    <footer class="footer footer-position-adjust">
+    <footer class="footer">
       <div class="footer__logo">
         <a href="./index.html">ohmyfood</a>
       </div>
