Ajout des media queries, modif padding margin, début loading spinner

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   </head>
 
   <body>
+
+    <div class="loading-spinner">
+      <div>OMF</div>
+    </div>
     <!-- HEADER -->
     <header class="header">
       <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
@@ -50,7 +54,7 @@
       <div class="presentation__information">
         Découvrez des restaurants d'exception, sélectionnés par nos soins.
       </div>
-      <button class="presention__btn btn">Explorer nos restaurants</button>
+      <button class="presentation__btn btn">Explorer nos restaurants</button>
     </section>
 
     <section class="steps">
