Ajustements media queries

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
           >Devenir partenaire</a
         >
       </div>
-      <div>
+      <div class="footer__legal">
         <a class="footer-font" href="#">Mentions légales</a>
       </div>
-      <div class="adjust">
+      <div class="footer__contact">
         <a class="footer-font" href="mailto:hello@openclasrooms.com">Contact</a>
       </div>
     </footer>
