Modif loading spinner, début anim plat favori

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
   <body>
 
     <div class="loading-spinner">
-      <div>OMF</div>
+      <div class="loading-spinner__text--1">Oh</div>
+      <div class="loading-spinner__text--2">My</div>
+      <div class="loading-spinner__text--3">Food</div>
     </div>
     <!-- HEADER -->
-    <header class="header">
+    <header class="header spinner-active">
       <img class="logo-ohmyfood" src=./public/img/logo/ohmyfood.png alt="logo
       d'ohmyfood"/>
     </header>
 
     <!-- SECTIONS -->
-    <div class="localisation">
+    <div class="localisation spinner-active">
       <div class="localisation__map-icon">
         <div class="localisation__map-icon-container">
           <div class="localisation__map-icon-insert">
@@ -49,7 +51,7 @@
       </form>
     </div>
 
-    <section class="presentation">
+    <section class="presentation spinner-active">
       <h1 class="presentation__title">Réservez le menu qui vous convient</h1>
       <div class="presentation__information">
         Découvrez des restaurants d'exception, sélectionnés par nos soins.
@@ -57,7 +59,7 @@
       <button class="presentation__btn btn">Explorer nos restaurants</button>
     </section>
 
-    <section class="steps">
+    <section class="steps spinner-active">
       <h2>Fonctionnement</h2>
       <div class="step-block">
         <div class="step-block__number">
@@ -114,7 +116,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container spinner-active">
       <h2>Restaurants</h2>
 
       <a class="restaurant" href="palette_du_gout.html">
@@ -181,7 +183,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer spinner-active">
       <div class="footer__logo">
         <a href="./index.html">ohmyfood</a>
       </div>
