--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -48,28 +48,61 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block part__all-block--first">
-          <div class="part__all-block-title">Fricassée d'escargot
+        <div class="part__block part__block--first">
+          <div class="part__block-choice">
+            <div class="part__block-choice-title">Fricassée d'escargot
+            </div>
+            <div class="part__block-choice-precision">Au piment d'Espelette
+            </div>
+            <div class="part__block-choice-price">25€
+            </div>
           </div>
-          <div class="part__all-block-precision">Au piment d'Espelette
-          </div>
-          <div class="part__all-block-price">25€
+          <div class="part__block-Xanim">
+            <div class="part__block-Xanim-container">
+              <div class="part__block-Xanim-insert">
+                <div class="part__block-Xanim-icon">
+                  <div class="fas fa-heart"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="part__all-block part__all-block--second">
-          <div class="part__all-block-title">Foie gras de canard mi-cuit
+        <div class="part__block part__block--second">
+          <div class="part__block-choice">
+            <div class="part__block-choice-title">Foie gras de canard mi-cuit
+            </div>
+            <div class="part__block-choice-precision">Et ses copeaux de truffe noire
+            </div>
+            <div class="part__block-choice-price">35€
+            </div>
           </div>
-          <div class="part__all-block-precision">Et ses copeaux de truffe noire
-          </div>
-          <div class="part__all-block-price">35€
+          <div class="part__block-Xanim">
+            <div class="part__block-Xanim-container">
+              <div class="part__block-Xanim-insert">
+                <div class="part__block-Xanim-icon">
+                  <div class="fas fa-heart"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="part__all-block part__all-block--third">
-          <div class="part__all-block-title">Oeuf au plat
+        <div class="part__block part__block--second">
+          <div class="part__block-choice">
+            <div class="part__block-choice-title">Oeuf au plat
+            </div>
+            <div class="part__block-choice-precision">Assaisonné à la truffe sur lit de caviar
+            </div>
+            <div class="part__block-choice-price">20€
+            </div>
           </div>
-          <div class="part__all-block-precision">Assaisonné à la truffe sur lit de caviar
-          </div>
-          <div class="part__all-block-price">20€
+          <div class="part__block-Xanim">
+            <div class="part__block-Xanim-container">
+              <div class="part__block-Xanim-insert">
+                <div class="part__block-Xanim-icon">
+                  <div class="fas fa-heart"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -80,28 +113,30 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block part__all-block--first">
-          <div class="part__all-block-title">Filet de boeuf aux herbes
-          </div>
-          <div class="part__all-block-precision">Accompagné de sa ribambelle de légumes
-          </div>
-          <div class="part__all-block-price">40€
-          </div>
-        </div>
-        <div class="part__all-block part__all-block--second">
-          <div class="part__all-block-title">Parmentier de queue de boeuf
-          </div>
-          <div class="part__all-block-precision">À la truffe noire sur sa purée de panais
-          </div>
-          <div class="part__all-block-price">35€
+        <div class="part__block part__block--first">
+          <div class="part__block-choice">
+            <div class="part__block-choice-title">Filet de boeuf aux herbes
+            </div>
+            <div class="part__block-choice-precision">Accompagné de sa ribambelle de légumes
+            </div>
+            <div class="part__block-choice-price">40€
+            </div>
           </div>
         </div>
-        <div class="part__all-block part__all-block--third">
-          <div class="part__all-block-title">Filet de turbot
+        <div class="part__block part__block--second">
+          <div class="part__block-title">Parmentier de queue de boeuf
           </div>
-          <div class="part__all-block-precision">Aux agrumes
+          <div class="part__block-precision">À la truffe noire sur sa purée de panais
           </div>
-          <div class="part__all-block-price">44€
+          <div class="part__block-price">35€
+          </div>
+        </div>
+        <div class="part__block part__block--third">
+          <div class="part__block-title">Filet de turbot
+          </div>
+          <div class="part__block-precision">Aux agrumes
+          </div>
+          <div class="part__block-price">44€
           </div>
         </div>
       </div>
@@ -113,28 +148,28 @@
         </div>
         <div class="part__highlight">
         </div>
-        <div class="part__all-block part__all-block--first">
-          <div class="part__all-block-title">Paris-Brest
+        <div class="part__block part__block--first">
+          <div class="part__block-title">Paris-Brest
           </div>
-          <div class="part__all-block-precision">Revisité
+          <div class="part__block-precision">Revisité
           </div>
-          <div class="part__all-block-price">18€
-          </div>
-        </div>
-        <div class="part__all-block part__all-block--second">
-          <div class="part__all-block-title">Macaron au chocolat d'exception
-          </div>
-          <div class="part__all-block-precision">Et glace à la vanille de Madagascar
-          </div>
-          <div class="part__all-block-price">22€
+          <div class="part__block-price">18€
           </div>
         </div>
-        <div class="part__all-block part__all-block--third">
-          <div class="part__all-block-title">Mousse au chocolat
+        <div class="part__block part__block--second">
+          <div class="part__block-title">Macaron au chocolat d'exception
           </div>
-          <div class="part__all-block-precision">Au piment d'Espelette et à la truffe noire
+          <div class="part__block-precision">Et glace à la vanille de Madagascar
           </div>
-          <div class="part__all-block-price">23€
+          <div class="part__block-price">22€
+          </div>
+        </div>
+        <div class="part__block part__block--third">
+          <div class="part__block-title">Mousse au chocolat
+          </div>
+          <div class="part__block-precision">Au piment d'Espelette et à la truffe noire
+          </div>
+          <div class="part__block-price">23€
           </div>
         </div>
 
