Suppression layout FORM, modif anim Coeur et Loading Spinner

--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -24,10 +24,10 @@
       d'ohmyfood"/>
     </header>
 
-    <section class="one-restaurant-img">
+    <div class="one-restaurant-img">
       <img class="one-restaurant-img__img" src=./public/img/palette_du_gout.jpg
       alt="plat proposé chez La palette du goût"/>
-    </section>
+    </div>
 
     <main class="one-restaurant">
       <div class="one-restaurant__information">
@@ -61,7 +61,7 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-heart"></div>
+                  <div class="fas fa-check"></div>
                 </div>
               </div>
             </div>
@@ -80,13 +80,13 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-heart"></div>
+                  <div class="fas fa-check"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="part__block part__block--second">
+        <div class="part__block part__block--third">
           <div class="part__block-choice">
             <div class="part__block-choice-title">Oeuf au plat
             </div>
@@ -99,13 +99,14 @@
             <div class="part__block-Xanim-container">
               <div class="part__block-Xanim-insert">
                 <div class="part__block-Xanim-icon">
-                  <div class="fas fa-heart"></div>
+                  <div class="fas fa-check"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
 
       <div class="part">
         <div class="part__title">
@@ -196,8 +197,7 @@
           </div>
         </div>
         <a class="footer__proposition-text footer-font" href="#"
-          >Proposer un restaurant</a
-        >
+          >Proposer un restaurant</a>
       </div>
 
       <div class="footer__proposition">
@@ -209,8 +209,7 @@
           </div>
         </div>
         <a class="footer__proposition-text footer-font" href="#"
-          >Devenir partenaire</a
-        >
+          >Devenir partenaire</a>
       </div>
       <div>
         <a class="footer-font" href="#">Mentions légales</a>
