Ajout Fontawesome regular.scss et finalisation Anim Coeur

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
+              <i class="far fa-heart"></i>
               <i class="fas fa-heart"></i>
             </div>
           </div>
@@ -142,7 +142,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
+              <i class="far fa-heart"></i>
               <i class="fas fa-heart"></i>
             </div>
           </div>
@@ -157,7 +157,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
+              <i class="far fa-heart"></i>
               <i class="fas fa-heart"></i>
             </div>
           </div>
@@ -172,7 +172,7 @@
         <div class="restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
+              <i class="far fa-heart"></i>
               <i class="fas fa-heart"></i>
             </div>
           </div>
