--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -35,7 +35,7 @@
         <div class="one-restaurant__information-heart restaurant__heart">
           <div class="restaurant__heart-container">
             <div class="restaurant__heart-insert">
-              <img src=./public/img/heart-regular.jpg alt="icone du coeur vide"/>
+              <i class="far fa-heart"></i>
               <i class="fas fa-heart"></i>
             </div>
           </div>
