--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/0aeff487f3.js" crossorigin="anonymous"></script>
     <title>La note enchantée</title>
   </head>
 
